--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -3,7 +3,10 @@
     position: relative; 
 }
 .logo img{
-    
     width: 100%; 
 }
-  
+  @media (min-width: 750px) {
+    .logo{
+        width: 160px; 
+    }
+  }
